# xorDLL

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md
.github/workflows/: build.yml
cmake/: CompilerFlags.cmake  Version.cmake  mingw-w64-toolchain.cmake
include/: version.h.in
include/cli/: command_line.h
include/core/: anti_detection.h  dll_loader.h  injection_core.h  injection_profile.h  manual_map.h  process_manager.h  process_monitor.h  thread_hijack.h  types.h
include/ui/: controls.h  dialogs.h  hotkeys.h  main_window.h  tray_icon.h
include/utils/: error_handler.h  file_utils.h  logger.h  settings.h  string_utils.h
resources/: xorDLL.manifest  xorDLL.rc
scripts/: compress.sh
src/: cli_main.cpp  main.cpp
src/cli/: command_line.cpp
src/core/: anti_detection.cpp  dll_loader.cpp  injection_core.cpp  injection_profile.cpp  manual_map.cpp  process_manager.cpp  process_monitor.cpp  thread_hijack.cpp
src/ui/: controls.cpp  dialogs.cpp  hotkeys.cpp  main_window.cpp  tray_icon.cpp
src/utils/: error_handler.cpp  logger.cpp  settings.cpp
